# netOpsAgent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  LLM_FEATURES.md  LLM_TEST_GUIDE.md  Makefile  README.md  REFACTORING_SUMMARY.md  SUMMARY.md  TOOL_CALLS_FEATURE.md  pyproject.toml  reproduce_fix.py  reproduce_issue.py  requirements-dev.txt  requirements.txt  task_3_2_completion_summary.md  task_3_2_verification_report.md  test_cmd_matching.py  test_debug.py  test_debug2.py  test_fix.py  test_ip_chat_query.py  test_ip_query.py  test_ip_tool_function.py  test_mock_random.py  test_office_automation.py  test_task_3_2_verification.html
.claude/: settings.json  settings.local.json  settingsClaude.json  settingsKimi.json
config/: networks.yaml
docs/: API_USAGE.md  InnovationRoadshow.md  MCP_DESIGN_SIMPLIFIED.md  README_session_persistence.md  RoadshowSlides.md  architecture.md  architecture_diagram.html  dataflow.md  design_change.md  frontend_session_persistence.md  functional_modules.html  parsers_design.md  rag_guide.md  session_persistence_walkthrough.md  spec.md  tracing_guide.md
runtime/: sessions.db
scripts/: _patch_api.py  _test_api.py  auto_push.bat  cleanup_knowledge.py  ingest_knowledge.py  start_api.bat  start_api.ps1
src/: api.py  cli.py  session_manager.py
static/: TEST_CLIPBOARD_HANDLER_README.md  access_assets.css  access_assets.html  access_assets.js  app.js  history.html  history.js  index.html  knowledge.html  knowledge.js  style.css  test_addActionsToMessage.html  test_clipboard_handler.html  test_edit_mode_renderer.html  (+9 more)
(+161 files in other folders)
